ui/consumer/workloads/config/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: compute-workloads-plugin
    app.kubernetes.io/name: compute-workloads-plugin
  name: compute-workloads-plugin
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/component: frontend
    app.kubernetes.io/instance: compute-workloads-plugin
    app.kubernetes.io/name: compute-workloads-plugin
